Fix overflow issues

--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,15 @@
     color: white;
     border-radius: 10px;
     padding: 12px 6px 0 0;
-    text-align: end;
     flex: 1;
     display: flex;
     flex-direction: column;
+}
+
+.container {
+    display: flex;
+    justify-content: end;
+    flex: 1;
 }
 
 #equation {
@@ -29,7 +34,11 @@
 
 #input {
     font-size: 48px;
+    white-space: nowrap;
+    align-self: flex-end;
 }
+
+
 
 .row {
     display: flex;
